fix mobile nav. center align footer

--- a/assets/styles/layouts/_footer.scss
+++ b/assets/styles/layouts/_footer.scss
@@ -3,6 +3,7 @@
 	border-top: 1px solid $plum;
 	border-bottom: 1px solid $plum;
 	display: flex;
+
 	flex-flow: column;
 	overflow: hidden;
 	padding: 0;
@@ -22,14 +23,14 @@ h3.biography {
 	}
 
 	.footer__contact-list {
-		display: flex;
-		flex-flow: column;
+		display: inline-block;
+		//flex-flow: column;
 		//align-items: center;
 		align-items: left;
 		list-style-type: none;
 		margin: 0;
 		padding: 1.5rem 0;
-		width: 85%;
+		//width: 85%;
 	}
 
 	.footer__contact-list li:first-of-type {
@@ -120,8 +121,10 @@ h3.biography {
 
 @media (min-width: 992px) {
 	.footer__contact-list {
+		display: flex;
 		flex-flow: row;
 		justify-content: space-around;
+		width: 85%;
 	}
 
 	.footer__contact-list li {
