--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -13,8 +13,7 @@ nav {
 
 nav.navbar-expand-md {
 	display:flex;
-	flex-flow: row !important;
-	justify-content: space-between !important;
+	justify-content: space-between !important; 
 }
 
 [id*="bs4navbar"] {
@@ -36,7 +35,7 @@ nav.navbar-expand-md {
 
 .navbar-nav .nav-link {
 	color:$whiteTrans !important;
-	font-size: 1.4rem;
+	font-size: 2rem;
 	font-family: 'Niramit', sans-serif;
 }
 
@@ -45,16 +44,15 @@ nav.navbar-expand-md {
 }
 
 /*ul menu-main-menu*/.navbar-nav {
-	align-self: flex-end;
+	//align-self: flex-end;
 	display: flex;
 	justify-content: space-between;
-	width: 80%;
+	width: 100%;
 	margin-right: 0 !important;
 
 }
 
 /*svg*/.brand__name {
-	//fill: $white;
 	fill: rgba( 255, 255, 255, 0.8);
 	height: 100%;
 	width: 100%;
@@ -88,12 +86,16 @@ nav.navbar-expand-md {
 	.brand {
 		width: 40%;
 	}
-}
-
-@media (min-width: 992px) {
 	.navbar-nav {
 		width: 80%;
 	}
+	.navbar-nav .nav-link {
+		font-size: 1.4rem;
+	}
+}
+
+@media (min-width: 992px) {
+	
 	.navbar-nav .nav-link {
 		font-size: 1.6rem;
 	}
